# crelay

./: .gitignore  HISTORY  Makefile  README.md  _config.yml  crelay.c  index.html  index.md  meson.build  meson_options.txt  params.json  tutorial_ifttt.md
conf/: crelay.conf
cp210x/: build-cp210x.sh
cp210x/kernel-3.10.y/: cp210x.c.gpio  cp210x.c.patch
cp210x/kernel-3.10.y/raspbian/: README  cp210x.ko
cp210x/kernel-3.6.y/: .directory  cp210x.c.gpio
cp210x/kernel-3.6.y/raspbian/: .directory  README  cp210x.ko
cp210x/silabs-kernel-3.13/: .cp210x.ko.cmd  .cp210x.mod.o.cmd  .cp210x.o.cmd  .directory  CP210x_VCP_Linux_3.13.x_Release_Notes.txt  Makefile  cp210x.c  cp210x_gpio_example.c
cp210x/silabs-kernel-3.13/.tmp_versions/: cp210x.mod
init.d/: crelayd
kernel-3.6.x/: .directory  cp210x.3.6.x.patch  cp210x.c
lib/: Makefile
lib/app/: Makefile  crelay_cli.c  data_types.h
monit/: crelayd
relays/ABACOM-USB-8-channel-LRB/: README
relays/Conrad-USB-4-channel/: README
relays/Denkovi-USB-4-8-channel/: README
relays/HID-API-compatible/: README
relays/SainSmart-USB-16-channel/: README
relays/SainSmart-USB-4-8-channel/: README
src/: Makefile  config.c  config.h  crelay.c  data_types.h  http.c  http.h  mqtt.c  mqtt.h  relay_drv.c  relay_drv.h  relay_drv_conrad.c  relay_drv_conrad.h  relay_drv_gpio.c  relay_drv_gpio.h  relay_drv_hidapi.c  relay_drv_hidapi.h  relay_drv_hidapi_sain.c  relay_drv_hidapi_sain.h  relay_drv_sainsmart.c  relay_drv_sainsmart.h  relay_drv_sainsmart16.c  relay_drv_sainsmart16.h  relay_drv_sample.c  relay_drv_sample.h
systemd/: crelay.service
